--- a/public/my-projects.html
+++ b/public/my-projects.html
@@ -280,6 +280,8 @@
                 <!-- Teacher Panel Link Removed -->
                 <li><a href="/instructor-dashboard.html?tab=analytics" class="navbar-link" id="navAnalytics"
                         style="display: none;">Analytics</a></li>
+                <li><a href="/instructor-dashboard.html" class="navbar-link">Instructors</a></li>
+                <li><a href="#" onclick="logout(); return false;" class="navbar-link logout-link">Logout</a></li>
             </ul>
 
             <div class="navbar-auth">
@@ -536,6 +538,7 @@
         // Init
         loadMyProjects();
     </script>
+    <script src="mobile-nav.js"></script>
 </body>
 
 </html>
